--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -1,4 +1,4 @@
-.react-dynamic-list-container {
+.dynamic-list-container {
   position: relative;
   display: flex;
   list-style: none;
@@ -6,7 +6,7 @@
   margin: 0;
 }
 
-.react-dynamic-list-item {
+.dynamic-list-item {
   word-break: break-all;
   cursor: grab;
 }
